--- a/.github/workflows/run.yml
+++ b/.github/workflows/run.yml
@@ -20,8 +20,8 @@ jobs:
     - name: Set up Python
       uses: actions/setup-python@v2
       with:
-        python-version: '3.x'
-     - uses: actions/cache@v2
+        python-version: 3.9.2
+    - uses: actions/cache@v2
       with:
         path: ~/.cache/pip
         key: ${{ runner.os }}-pip-${{ hashFiles('**/run_in_Actions/requirements.txt') }}
